--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,22 @@
 server.port=8089
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/deli
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-app.firebase-configuration-file=googlecred.json
+#spring.datasource.url=jdbc:mysql://localhost:3306/deli
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#app.firebase-configuration-file=googlecred.json
 # server.error.include-message = always
 # server.error.include-stacktrace=never
+## Remove H2 configuration in live environment ##
+spring.datasource.url=jdbc:h2:mem:deli
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# OPEN API - Swagger Configuration
+openapi.title=Delicious
+openapi.version=v0.1
+openapi.description=app describe recipe food
+
+
